--- a/databaze/databaze.csproj
+++ b/databaze/databaze.csproj
@@ -7,7 +7,12 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.9" />
+      <Folder Include="Migrations\" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="EntityFrameworkCore.Extensions.MySql" Version="1.0.1-rc03" />
+      <PackageReference Include="MySql.EntityFrameworkCore" Version="7.0.0" />
     </ItemGroup>
 
 </Project>
