--- a/databaze/databaze.csproj
+++ b/databaze/databaze.csproj
@@ -12,6 +12,10 @@
 
     <ItemGroup>
       <PackageReference Include="EntityFrameworkCore.Extensions.MySql" Version="1.0.1-rc03" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.9">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
       <PackageReference Include="MySql.EntityFrameworkCore" Version="7.0.0" />
     </ItemGroup>
 
