--- a/test-docker/test-docker.csproj
+++ b/test-docker/test-docker.csproj
@@ -1,10 +1,23 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
+        <OutputType>Exe</OutputType>
         <TargetFramework>net7.0</TargetFramework>
+        <RootNamespace>test_docker</RootNamespace>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     </PropertyGroup>
+
+    <ItemGroup>
+      <Content Include="..\.dockerignore">
+        <Link>.dockerignore</Link>
+      </Content>
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\databaze\databaze.csproj" />
+    </ItemGroup>
 
     <ItemGroup>
       <PackageReference Include="EntityFrameworkCore.Extensions.MySql" Version="1.0.1-rc03" />
