--- a/WebOsadnici/appsettings.json
+++ b/WebOsadnici/appsettings.json
@@ -8,5 +8,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "urls": "http://*:5000;https://*:5001"
 }
